--- a/tkweb/index.html
+++ b/tkweb/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Mobilestore</title>
+	<title>Mobile Store - Mua Điện Thoại Chính Hãng Giá Tốt</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="description" content="Mobile Store - Cung cấp điện thoại chính hãng, dịch vụ ưu đãi và khuyến mãi hấp dẫn. Gọi ngay: 1-800-948-748">
 	<meta name="keywords" content="Mobile Store, điện thoại, mua sắm, giá tốt">
